resets for apply-call work

--- a/youtube-watch-together-domain-gen/test.html
+++ b/youtube-watch-together-domain-gen/test.html
@@ -9,7 +9,7 @@
 
   <div class="output"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="genDomain.js"></script>
-  <script src="words.js"></script>
+  <!-- <script src="genDomain.js"></script> -->
+  <!-- <script src="words.js"></script> -->
 </body>
 </html>
